Add windows specific core module as a root module in jlink
No one references it, but it should still be included as it's loaded through the ServiceLoader